@@ -106,9 +106,17 @@ void edir(const char *dirname) {
       break;
     }
     if (d->d_name[0] == '.') continue;
-    if (openreadclose(d->d_name, &sa, 256) == -1)
-      strerr_die6sys(111, FATAL, "unable to read ", dirname, "/",
-		     d->d_name, ": ");
+    if (openreadclose(d->d_name, &sa, 256) == -1) {
+      if ((errno == error_isdir) && env_dir) {
+	if (verbose)
+	  strerr_warn6(WARNING, "unable to read ", dirname, "/",
+	               d->d_name, ": ", &strerr_sys);
+	continue;
+      }
+      else
+        strerr_die6sys(111, FATAL, "unable to read ", dirname, "/",
+	      	       d->d_name, ": ");
+    }
     if (sa.len) {
       sa.len =byte_chr(sa.s, sa.len, '\n');
       while (sa.len && (sa.s[sa.len -1] == ' ' || sa.s[sa.len -1] == '\t'))
