@@ -1,4 +1,5 @@
   * fmt_ptime.c: create timestamps in UTC, not localtime.
+  * chpst.c: -e dir: silently ignore directories, print warning if verbose.
 
 runit 1.0.0
 Tue, 10 Feb 2004 13:37:28 +0000
